Entries in recent list (file select dialog) don't get pushed to top if used again #32564

Closed
opened 2012-09-16 20:32:15 +02:00 by CodeManX · 4 comments
Member

%%%1. Click File > Open
2. Click on one of the recent list entries (preferably last in list) and open a file from that path
3. File > Open again
4. See the previously used path in recent list still being at same position (e.g. last entry)
5. Open a file from a path, which is not yet in recent list
6. File > Open
7. If the path you used in 2.) was the last entry (and list had max entries already), it will now be gone, dropped from list, although it was just used.

fsmenu_insert_entry() in editors/space_file/file_ops.c checks, whether the just used path is already in recent list, and if yes, simply returns (line 175).

It should rather insert the just used path at top (if category == FS_CATEGORY_RECENT), which would push all other entries one position down, and skip/pop the "old" entry with same path (list length should stay the same in the end).

I believe using the existing fsmenu_remove_entry() function would be an option, but not an ideal solution, as it expects an index (idx) and we don't have that in fsmenu_insert_entry() yet. So it might be better to rework the existing code...

%%%

%%%1. Click File > Open 2. Click on one of the recent list entries (preferably last in list) and open a file from that path 3. File > Open again 4. See the previously used path in recent list still being at same position (e.g. last entry) 5. Open a file from a path, which is not yet in recent list 6. File > Open 7. If the path you used in 2.) was the last entry (and list had max entries already), it will now be gone, dropped from list, although it was just used. fsmenu_insert_entry() in editors/space_file/file_ops.c checks, whether the just used path is already in recent list, and if yes, simply returns (line 175). It should rather insert the just used path at top (if category == FS_CATEGORY_RECENT), which would push all other entries one position down, and skip/pop the "old" entry with same path (list length should stay the same in the end). I believe using the existing fsmenu_remove_entry() function would be an option, but not an ideal solution, as it expects an index (idx) and we don't have that in fsmenu_insert_entry() yet. So it might be better to rework the existing code... %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r50681.%%%

%%%fixed r50681.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%thanks a lot campbell!

you deserve (and seem to need) vacation after 2.64 release / mango: you missed a "flag &", but no worries, elubie will fix it%%%

%%%thanks a lot campbell! you deserve (and seem to need) vacation after 2.64 release / mango: you missed a "flag &", but no worries, elubie will fix it%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32564
No description provided.