fix [#32564] Entries in recent list (file select dialog) don't get pushed to top if used again