source/blender/editors/space_file/fsmenu.h
@@ -45,7 +45,8 @@ typedef enum FSMenuCategory {
 
 typedef enum FSMenuInsert {
 	FS_INSERT_SORTED = (1 << 0),
-	FS_INSERT_SAVE   = (1 << 1)
+	FS_INSERT_SAVE   = (1 << 1),
+	FS_INSERT_FIRST  = (1 << 2)   /* moves the item to the front of the list when its already there */
 } FSMenuInsert;
 
 struct FSMenu;
